<package>
  <name>fsd_localization</name>
  <version>0.0.0</version>
  <description>FSD package</description>
  <maintainer email="rqmaffei@gmail.com">Renan de Queiroz Maffei</maintainer> 
  <license>BSD</license>
<!--  <url type="website">http://wiki.ros.org/Robots/Pioneer</url>-->
  <author email="rqmaffei@gmail.com">Renan de Queiroz Maffei</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>opengl</build_depend>
  <build_depend>glut</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf2_sensor_msgs</run_depend>

</package>
